bk_ida/gccida/c2/canon_hash
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/canon_hash/src/cse.c:2699:34: error: must use 'enum' tag to refer to type 'machine_mode'
unsigned int  canon_hash( rtx x, machine_mode mode) 
                                 ^
                                 enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/canon_hash/src/cse.c:2800:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v27 = ( unsigned __int8 *)v2[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/canon_hash/src/cse.c:2817:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v30 = ( int *)v2[2]; 
              ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/canon_hash/src/cse.c:2822:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v33.rtwint = ( __int64)v2[2].fld[0]; 
                       ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/canon_hash/src/cse.c:2831:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( *( _QWORD *)&v30[2 * v31 + 2] + 2LL)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/canon_hash/src/cse.c:2832:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v33.rtwint = ( __int64)v2[2].fld[0]; 
                       ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/canon_hash/src/cse.c:2852:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v30 = ( int *)v2[2]; 
              ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/canon_hash/src/cse.c:2893:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v7.rtwint = ( __int64)v2->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/canon_hash/src/cse.c:2940:5: error: assigning to '__m128i' (vector of 2 'long long' values) from incompatible type 'long long'
v50 = 0LL; 
    ^ ~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/canon_hash/src/cse.c:2946:5: error: assigning to '__m128i' (vector of 2 'long long' values) from incompatible type 'long long'
v50 = 0LL; 
    ^ ~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/canon_hash/src/cse.c:2987:29: error: use of undeclared identifier 'machine_mode'
v4 += canon_hash( v53[1], ( machine_mode)*( ( unsigned __int8 *)v53[1] + 2)); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/canon_hash/src/cse.c:2995:32: error: use of undeclared identifier 'machine_mode'
v4 += canon_hash( ( rtx)v57, ( machine_mode)*( unsigned __int8 *)( v57 + 2)); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/canon_hash/src/cse.c:3011:36: error: must use 'enum' tag to refer to type 'mode_class'
|| !fixed_regs[rtuint] && *( const mode_class *)( ( char *)mode_class_0 + ( ( v5 >> 14) & 0x3FC)) != MODE_CC) ) 
                                   ^
                                   enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/canon_hash/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/canon_hash/src/cse.c:3011:60: error: use of undeclared identifier 'mode_class_0'
|| !fixed_regs[rtuint] && *( const mode_class *)( ( char *)mode_class_0 + ( ( v5 >> 14) & 0x3FC)) != MODE_CC) ) 
                                                           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/canon_hash/src/cse.c:3060:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v9.rtwint = ( __int64)v2->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/canon_hash/src/cse.c:3068:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v8.rtwint = ( __int64)v2->fld[0]; 
                      ^~~~~~~~~~
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/canon_hash/src/obj/cse.o] Error 1
